--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "devDependencies": {},
   "scripts": {
+    "start":"node bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+
   },
-  "author": "",
+  "author": "PCloherty",
   "license": "ISC"
 }
