--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "dependencies": {
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
+    "mongodb": "^3.5.9",
     "node-fetch": "^2.6.0"
   },
   "devDependencies": {},
   "scripts": {
-    "start":"node bot.js",
+    "start": "node bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
-
   },
   "author": "PCloherty",
   "license": "ISC"
